@@ -2,6 +2,7 @@ s3cmd 0.9.4   -   ...
 ===========
 * Support for transparent GPG encryption of uploaded files.
 * HTTP proxy support
+* HTTPS protocol support
 
 s3cmd 0.9.3   -   2007-05-26
 ===========
